data_url/data_url_2293.txt
Hi, I am using PyCharm/Anaconda. I am trying to install Cirq and I used the following commands in the docs:
python -m pip install --upgrade pip
python -m pip install cirq
C:\Users\yoges\Anaconda3\envs\hello_qubits\python.exe C:/Users/yoges/PycharmProjects/hello_qubits/hello_qubits.py
File "C:/Users/yoges/PycharmProjects/hello_qubits/hello_qubits.py", line 1
python -m pip install --upgrade pip
^
SyntaxError: invalid syntax
I also tried to find Cirq in the project interpreter (this is how PyCharm suggests adding libraries/packages) but it came up empty.
I'm a novice, so any help is appreciated!
Yogesh
Those commands are supposed to be run from the command line, not as a python program.
In pycharm open the terminal tab

and run the commands from there.
Your machine is probably not connected to the internet. Check for that.
Awesome!! Is it okay if i close this ticket now that this has been resolved?
